[package]
name = "satori-cli"
version = "1.0.0"
edition = "2021"
description = "Command line program to submit solutions on code testing platform Satori"
categories = ["command-line-utilities", "development-tools"]
license = "MIT"
repository = "https://github.com/dominik-korsa/satori-cli"
keywords = ["satori", "cli", "submit", "uj"]

[[bin]]
name = "satori"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.6", features=["cookies", "blocking", "multipart"] }
cookie_store = "0.15.0"
clap = { version = "3.0.0-beta.5", features=["derive"] }
dialoguer = "0.9.0"
console = "0.15.0"
directories = "4.0.1"
envy = "0.4.2"
serde = "1.0.130"
cookie = "0.15.0"
bytes = "1.0.1"
regex = "1.5.4"
heck = "0.3.3"
open = "2.0.1"
scraper = "0.12.0"
